--- a/src/scss/components/_input&list.scss
+++ b/src/scss/components/_input&list.scss
@@ -140,7 +140,7 @@
 .delete-task {
 	padding: 0.5rem;
 	background-color: transparent;
-	background-image: url("../../../images/icon-cross.svg");
+	background-image: url("../images/icon-cross.svg");
 	border: none;
 	cursor: pointer;
 }
